syntax = "proto3";



package session;
option csharp_namespace = "TEM.DTO";
import "Api/Protos/base.proto";

service SessionService {  
  rpc GetSession (GetSessionRequest) returns (Session);
  rpc GetAllSessionsForClient (GetAllSessionsForClientRequest) returns (GetAllSessionsForClientResponse);
}


message Session {
	base.BaseDTO common = 1;
	string client_guid = 2;
}

message GetSessionRequest {
	string session_guid = 1;
}

message GetAllSessionsForClientRequest {
	string client_guid = 1;
}

message GetAllSessionsForClientResponse {
	repeated Session sessions = 1;
}
